# camctrl

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: device.rs  discovery.rs  main.rs  util.rs
