[package]
name = "camctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
chrono = "0.4"
env_logger = "0.9"
log = "0.4"
nix = "0.23"
onvif = { git = "https://github.com/lumeohq/onvif-rs", rev = "ed815ef265378423991739046c6a7c7ceb3ced41" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }
yaserde = "0.7"
